Mon Feb 17 12:56:05 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.10
	  - Add new templates for MSVC100 (Visual C++ 2010) as a C compiler on
	    32bit Windows.

Fri Feb 14 13:37:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.9
	  - Add new templates for MSVC100 (Visual C++ 2010) on 32bit Windows.

Fri Feb 14 11:31:54 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/conf.d/i686-mswin/traits-msvc_100.erb : Add new templates for
	  MSVC100 (Visual C++ 2010) on 32bit Windows.
	* etc/conf.d/i686-mswin/cinit-msvc_100.erb : Ditto.

Fri Feb  7 14:54:17 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.8
	  - Fix preprocessor in order not to abend when a function-like macro
	    generates a hexadecimal integer-constant from standalone prefix and
	    number by the concatenation operator.

Thu Feb  6 15:22:34 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.7
	  - Fix preprocessor in order not to abend when a function-like macro
	    generates a hexadecimal integer-constant from standalone prefix and
	    number by the concatenation operator.

Wed Feb  5 10:28:10 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/scanner.rb : Fix preprocessor in order not to abend
	  when a function-like macro generates a hexadecimal integer-constant
	  from standalone prefix and number by the concatenation operator.

	* features/code_check/E0008.feature : Add token concatenation scenarios
	  to reproduce the bug reported on the AdLint PAD site.

Thu Jan  9 15:22:32 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.6
	  - Fix incomplete expression-constancy check under the constraits of
	    ISO C99 standard.
	  - Clip code-exam passivation feature into Examination::Passivation
	    module in order to easily create passive code-exam classes.
	  - Revise the interpreter interface in order to make evaluation modes